Make use of jMolecules in Product aggregate.
Declare Product to be a Spring Data AbstractAggregateRoot. Remove obsolete JPA annotations (added by the jMolecules ByteBuddy plugin). Creating a new Product now registers a ProductAdded event. Refactor ProductIdentifier to be a record.